Project3/testcases/moretest7.out

*** Error line 1.
int test() { return 1;)
                      ^
*** syntax error

